spark/spark-worker1-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker1
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker1
  template:
    metadata:
      labels:
        component: spark-worker1
    spec:
      containers:
        - name: saurpath/spark
          image: spark-hadoop:3.0.0
          command: ["/spark-worker"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
