spark/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: spark-master
  name: spark-master
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: webui
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: spark
    port: 7077
    protocol: TCP
    targetPort: 7077
  selector:
    app: spark-master
  sessionAffinity: None
  type: ClusterIP
